--- a/piano tiles/instruction.html
+++ b/piano tiles/instruction.html
@@ -7,7 +7,9 @@
 </head>
 <body>
     <a href="../index.html"><img class="arrow" src="arrow-removebg-preview.png" alt=""></a> 
-     <img class="instruction" src="Frame 5.png" alt="">
+      <div class="title">
+        <h2>Instructions</h2>
+      </div>
     <style>
         body{
             background-color: rgb(73, 235, 235);
