--- a/piano tiles/instruction.html
+++ b/piano tiles/instruction.html
@@ -51,6 +51,32 @@
             margin-left: 23px;
             margin-top: 10px;        
          }
+         @media (max-width:412px) {
+          .arrow{
+            position: absolute;
+            width: 10vw;
+            height: 30px;
+            margin-left: -10vw;
+            margin-top: -32px;        
+         }
+         .title{
+             
+             color: blue;
+              margin-left: 1vw;
+              margin-top: -95vw;
+              position: absolute;
+
+           }
+           .main-div{
+            height: 200vw;
+            width: 75vw;
+            margin-left: 12vw;
+            margin-top: 10vw;
+            position: absolute;
+            background-color: aliceblue;
+          }
+          
+         }
     </style>
 </body>
 </html>
