--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
      
 </div>
 <div class="img">
-    <img src="https://drive.google.com/uc?id=19zSLvSV1l4_bkxfaYUC9OpR1OZLBPZa_">
+    <img src="background img.jpg">
 </div>
  
 <div class="inst">
