--- a/piano tiles/instruction.html
+++ b/piano tiles/instruction.html
@@ -26,10 +26,12 @@
           .title{
              
             color: blue;
-            top: 45%; 
-            left: 50%; 
-            transform: translate(-50%, -50%);  
-            font-size: larger;
+            margin-top: 10vw;
+            margin-left: 37vw;
+            position: absolute;
+            margin-left: 36vw;
+    padding-top: 0.5vw;
+
           }
           .content{
             justify-content: flex-start;
@@ -62,9 +64,11 @@
          .title{
              
              color: blue;
-              margin-left: 1vw;
+              margin-left: 100vw;
               margin-top: -95vw;
               position: absolute;
+              margin-left: 37vw;
+
 
            }
            .main-div{
