--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
       <button class="restart">Replay</button>
   </div>
 </div>
-<audio id="audio" src="./piano tiles/select-songs/songs/Shakira - Hips Don't Lie (Lyrics) ft. Wyclef Jean.mp3" hidden>
+<audio id="audio" src="Shakira - Hips Don't Lie (Lyrics) ft. Wyclef Jean.mp3" hidden>
 <audio id="play" src="https://drive.google.com/uc?id=16ZqyQo4C59nUeXcP7H7L7XzUwrI7f3bW" hidden>
 <audio id="out" src="https://drive.google.com/uc?id=1OtAEm0PY38LdtKPBRe_ucoysYkAY7cG2" hidden>
 <audio id="result" src="https://drive.google.com/uc?id=1GvdIT1VsX48R9emQHCWxs4KP-hEQxeal" hidden>
