--- a/piano tiles/instruction.html
+++ b/piano tiles/instruction.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
+  <!-- <img src="../background img.jpg" alt=""> -->
   <div class="main-div">
       <a href="../index.html"><img class="arrow" src="arrow-removebg-preview.png" alt=""></a> 
 
@@ -23,6 +24,13 @@
         body{
             background-color: rgb(73, 235, 235);
         }
+        /* img{
+          position: absolute;
+          margin-top: -20;
+          z-index: -1;
+          width: 100%;
+          height: 100%;
+        } */
           .title{
              
             color: blue;
